# thriller-minigame

./: Cargo.toml  README.md
docs/: rfc-difficulty.md
vesper-ai/: Cargo.toml
vesper-ai/src/: auditor.rs  auth.rs  client.rs  director.rs  lib.rs
vesper-cli/: Cargo.toml
vesper-cli/src/: main.rs  soak.rs  turn.rs
vesper-core/: Cargo.toml
vesper-core/src/: events.rs  lib.rs  rules.rs  state.rs  world.rs
vesper-db/: Cargo.toml
vesper-db/src/: lib.rs  npcs.rs  schema.sql
vesper-ui/: Cargo.toml
vesper-ui/src/: app.rs  audio.rs
