[workspace]
members = ["vesper-cli", "vesper-core", "vesper-ai", "vesper-db", "vesper-ui"]
resolver = "2"

[workspace.dependencies]
ratatui            = { version = "0.30" }
crossterm          = { version = "0.29", features = ["event-stream"] }
tokio              = { version = "1", features = ["full"] }
futures            = "0.3"
reqwest            = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
rusqlite           = { version = "0.32", features = ["bundled"] }
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "serde"] }
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
directories        = "5"
dialoguer          = { version = "0.12", features = ["fuzzy-select"] }
