[package]
name = "vesper-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
vesper-core        = { path = "../vesper-core" }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
futures            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
